k8s/20-app.yml
apiVersion: v1
kind: Service
metadata:
  name: devops-app
  namespace: devops
spec:
  selector:
    app: devops-app
  ports:
    - name: http
      port: 80
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-app
  namespace: devops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devops-app
  template:
    metadata:
      labels:
        app: devops-app
    spec:
      containers:
        - name: app
          image: dule221099/devops:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
